@@ -1,4 +1,5 @@
 
+	* use unique peer_ids per connection
 	* fix iOS build on recent SDK
 	* fix tracker connection bind issue for IPv6 trackers
 	* fix error handling of some merkle torrents
